# WebServer

./: .gitignore  CMakeLists.txt  README.md  bootstrap.bat  bootstrap.sh
include/: TcpConnection.hpp  WebServer.hpp
scripts/: bootstrap.bat  bootstrap.sh
src/: CMakeLists.txt  Main.cpp  Result.hpp  TcpConnection.cpp  TcpConnection.hpp  WebServer.cpp  WebServer.hpp
